# cc-enhanced

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  claude_legacy.rs  ide.rs  main.rs  ui.rs  widgets.rs  widgets_tests.rs
src/claude/: analytics.rs  data_manager.rs  mod.rs  pricing.rs  project_scanner.rs  session_parser.rs  usage_calculator.rs
src/features/: mod.rs
src/features/todos/: data.rs  mod.rs
src/shared/: config.rs  i18n.rs  mod.rs  theme.rs
