[package]
name = "cc-enhanced"
version = "1.0.2"
edition = "2021"
rust-version = "1.77"
description = "🚀 An unofficial next-generation TUI dashboard for Claude Code project management - Monitor usage, track todos, analyze costs"
license = "GPL-3.0"
authors = ["melonicecream <testgam1@gmail.com>"]
repository = "https://github.com/melonicecream/cc-enhanced"
homepage = "https://github.com/melonicecream/cc-enhanced"
documentation = "https://github.com/melonicecream/cc-enhanced/blob/main/README.md"
keywords = ["claude", "tui", "dashboard", "project-management", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    "screenshots/*", 
    "docs/*",
    ".github/*"
]

[[bin]]
name = "cc-enhanced"
path = "src/main.rs"

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.10"
unicode-segmentation = "1.10"
unicode-width = "0.1"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
